# submit

./: .gitignore  README.md  pyproject.toml  requirements.txt  submit.py  tasks.yaml
auto_submit/: launch.py  shell.py
auto_submit/utils/: config.py  gpu.py  lock.py  redisdb.py  task.py
config/: default_config.yaml  tasks.yaml
