[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
version="0.0.1"
name = "auto_submit"
authors = [
  { name="?" },
]
description = "自动提交任务"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Unix",
]
requires-python = ">=3.8"
dynamic = ["dependencies"]

[tool.hatch.build.targets.wheel]
packages = ["auto_submit"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}