[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "auto_submit"
version = "0.0.1"
description = "自动提交任务"
authors = [
    { name = "yym", email = "yaoyiming@stu.xmu.edu.cn" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Unix",
]
requires-python = ">=3.8"

# 直接添加依赖项
dependencies = [
    "tqdm",
    "redis",
    "psutil",
    "pyyaml",
]

[tool.hatch.build.targets.wheel]
packages = ["auto_submit"]